standards/gnds-2.0/try/c/src/v2.0/tsl/DebyeWallerIntegral.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// DebyeWallerIntegral is the basic handle type in this file. Example:
//    // Create a default DebyeWallerIntegral object:
//    DebyeWallerIntegral handle = DebyeWallerIntegralDefault();
// Functions involving DebyeWallerIntegral are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_TSL_DEBYEWALLERINTEGRAL
#define C_INTERFACE_TRY_V2_0_TSL_DEBYEWALLERINTEGRAL

#include "GNDStk.h"
#include "v2.0/containers/XYs1d.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct DebyeWallerIntegralClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ DebyeWallerIntegral
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct DebyeWallerIntegralClass *DebyeWallerIntegral;

// --- Const-aware handles.
typedef const struct DebyeWallerIntegralClass *const ConstHandle2ConstDebyeWallerIntegral;
typedef       struct DebyeWallerIntegralClass *const ConstHandle2DebyeWallerIntegral;
typedef const struct DebyeWallerIntegralClass *      Handle2ConstDebyeWallerIntegral;
typedef       struct DebyeWallerIntegralClass *      Handle2DebyeWallerIntegral;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstDebyeWallerIntegral
DebyeWallerIntegralDefaultConst();

// +++ Create, default
extern_c Handle2DebyeWallerIntegral
DebyeWallerIntegralDefault();

// --- Create, general, const
extern_c Handle2ConstDebyeWallerIntegral
DebyeWallerIntegralCreateConst(
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Create, general
extern_c Handle2DebyeWallerIntegral
DebyeWallerIntegralCreate(
   ConstHandle2ConstXYs1d XYs1d
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
DebyeWallerIntegralAssign(ConstHandle2DebyeWallerIntegral This, ConstHandle2ConstDebyeWallerIntegral from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
DebyeWallerIntegralDelete(ConstHandle2ConstDebyeWallerIntegral This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
DebyeWallerIntegralRead(ConstHandle2DebyeWallerIntegral This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
DebyeWallerIntegralWrite(ConstHandle2ConstDebyeWallerIntegral This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
DebyeWallerIntegralPrint(ConstHandle2ConstDebyeWallerIntegral This);

// +++ Print to standard output, as XML
extern_c int
DebyeWallerIntegralPrintXML(ConstHandle2ConstDebyeWallerIntegral This);

// +++ Print to standard output, as JSON
extern_c int
DebyeWallerIntegralPrintJSON(ConstHandle2ConstDebyeWallerIntegral This);


// -----------------------------------------------------------------------------
// Child: XYs1d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
DebyeWallerIntegralXYs1dHas(ConstHandle2ConstDebyeWallerIntegral This);

// --- Get, const
extern_c Handle2ConstXYs1d
DebyeWallerIntegralXYs1dGetConst(ConstHandle2ConstDebyeWallerIntegral This);

// +++ Get, non-const
extern_c Handle2XYs1d
DebyeWallerIntegralXYs1dGet(ConstHandle2DebyeWallerIntegral This);

// +++ Set
extern_c void
DebyeWallerIntegralXYs1dSet(ConstHandle2DebyeWallerIntegral This, ConstHandle2ConstXYs1d XYs1d);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif