versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/DebyeWallerIntegral.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalDebyeWallerIntegral
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function DebyeWallerIntegralDefaultConst() &
      bind(C, name='DebyeWallerIntegralDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function DebyeWallerIntegralDefaultConst

!! Create, default
function DebyeWallerIntegralDefault() &
      bind(C, name='DebyeWallerIntegralDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function DebyeWallerIntegralDefault

!! Create, general, const
function DebyeWallerIntegralCreateConst( &
   XYs1d &
) &
      bind(C, name='DebyeWallerIntegralCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: XYs1d
   type(c_ptr) :: handle
end function DebyeWallerIntegralCreateConst

!! Create, general
function DebyeWallerIntegralCreate( &
   XYs1d &
) &
      bind(C, name='DebyeWallerIntegralCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: XYs1d
   type(c_ptr) :: handle
end function DebyeWallerIntegralCreate

!! Assign
subroutine DebyeWallerIntegralAssign(handleLHS, handleRHS) &
      bind(C, name='DebyeWallerIntegralAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine DebyeWallerIntegralAssign

!! Delete
subroutine DebyeWallerIntegralDelete(handle) &
      bind(C, name='DebyeWallerIntegralDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine DebyeWallerIntegralDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function DebyeWallerIntegralRead(handle, filename, filenameSize) &
      bind(C, name='DebyeWallerIntegralRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function DebyeWallerIntegralRead

!! Write to file
function DebyeWallerIntegralWrite(handle, filename, filenameSize) &
      bind(C, name='DebyeWallerIntegralWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function DebyeWallerIntegralWrite

!! Print to standard output, in our prettyprinting format
function DebyeWallerIntegralPrint(handle) &
      bind(C, name='DebyeWallerIntegralPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function DebyeWallerIntegralPrint

!! Print to standard output, as XML
function DebyeWallerIntegralPrintXML(handle) &
      bind(C, name='DebyeWallerIntegralPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function DebyeWallerIntegralPrintXML

!! Print to standard output, as JSON
function DebyeWallerIntegralPrintJSON(handle) &
      bind(C, name='DebyeWallerIntegralPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function DebyeWallerIntegralPrintJSON


!! -----------------------------------------------------------------------------
!! Child: XYs1d
!! -----------------------------------------------------------------------------

!! Has
function DebyeWallerIntegralXYs1dHas(handle) &
      bind(C, name='DebyeWallerIntegralXYs1dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function DebyeWallerIntegralXYs1dHas

!! Get, const
function DebyeWallerIntegralXYs1dGetConst(handle) &
      bind(C, name='DebyeWallerIntegralXYs1dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function DebyeWallerIntegralXYs1dGetConst

!! Get
function DebyeWallerIntegralXYs1dGet(handle) &
      bind(C, name='DebyeWallerIntegralXYs1dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function DebyeWallerIntegralXYs1dGet

!! Set
subroutine DebyeWallerIntegralXYs1dSet(handle, fieldHandle) &
      bind(C, name='DebyeWallerIntegralXYs1dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine DebyeWallerIntegralXYs1dSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalDebyeWallerIntegral
